# building-ai-agents

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/: agent.py  building_dataset.py  data.py  models.py  optimizer.py  runner.py  tools.py
